--- a/Pattern.Synchro.Client/Pattern.Synchro.Client.csproj
+++ b/Pattern.Synchro.Client/Pattern.Synchro.Client.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
     
     <ItemGroup>
-        <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-        <PackageReference Include="sqlite-net-pcl" Version="1.7.302-beta" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
     </ItemGroup>
 </Project>
