--- a/Pattern.Synchro.Sample.Client/Pattern.Synchro.Sample.Client.csproj
+++ b/Pattern.Synchro.Sample.Client/Pattern.Synchro.Sample.Client.csproj
@@ -5,8 +5,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-        <PackageReference Include="sqlite-net-pcl" Version="1.7.302-beta" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
     </ItemGroup>
 
     <ItemGroup>
