--- a/Pattern.Synchro.Client/Pattern.Synchro.Client.csproj
+++ b/Pattern.Synchro.Client/Pattern.Synchro.Client.csproj
@@ -4,10 +4,17 @@
         <TargetFramework>netstandard2.0</TargetFramework>
         <VersionPrefix>99.99.99.99</VersionPrefix>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
     
     <ItemGroup>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <Compile Include="..\Pattern.Synchro.Api\Serializer.cs">
+        <Link>Serializer.cs</Link>
+      </Compile>
     </ItemGroup>
 </Project>
