--- a/Pattern.Synchro.Client/Pattern.Synchro.Client.csproj
+++ b/Pattern.Synchro.Client/Pattern.Synchro.Client.csproj
@@ -8,8 +8,8 @@
     </PropertyGroup>
     
     <ItemGroup>
-        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+        <PackageReference Include="System.Text.Json" Version="7.0.3" />
     </ItemGroup>
     
     <ItemGroup>
