--- a/Pattern.Synchro.Tests/Pattern.Synchro.Tests.csproj
+++ b/Pattern.Synchro.Tests/Pattern.Synchro.Tests.csproj
@@ -15,6 +15,10 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="coverlet.collector" Version="6.0.0">
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
     </ItemGroup>
     <ItemGroup>
       <ProjectReference Include="..\Pattern.Synchro.Sample.Api\Pattern.Synchro.Sample.Api.csproj" />
