--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Install sonarscanner
         run: dotnet tool install --global dotnet-sonarscanner
       - name: Begin scan
-        run: dotnet sonarscanner begin /k:"neocra-pattern-synchro" /o:"neocra-github" /d:sonar.host.url=https://sonarcloud.io /d:sonar.login="$SONAR_TOKEN" /d:sonar.cs.opencover.reportsPaths="coverage.opencover.xml"
+        run: dotnet sonarscanner begin /k:"neocra-pattern-synchro" /o:"neocra-github" /d:sonar.host.url=https://sonarcloud.io /d:sonar.login="$SONAR_TOKEN" /d:sonar.cs.opencover.reportsPaths="**/coverage.opencover.xml"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -38,8 +38,6 @@ jobs:
         run: dotnet build --configuration Release
       - name: Test
         run: dotnet test --configuration Release --no-build  --collect:"XPlat Code Coverage" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
-      - name: Copy coverage
-        run: cp Pattern.Synchro.Tests/TestResults/*/coverage.opencover.xml .
       - name: End scan
         run: dotnet sonarscanner end /d:sonar.login="$SONAR_TOKEN"
         env:
