--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,7 +5,9 @@ on:
   pull_request:
     branches:
       - main
-
+  merge_group:
+    branches:
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
