--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,7 +5,9 @@ on:
   pull_request:
     branches:
       - main
-
+  merge_group:
+    branches:
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,6 +17,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '21'
       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: |
